objects/DocumentStep__c.object
<CustomObject>
    <fields>
        <fullName>DocumentRequirement__c</fullName>
        <description>The document requirement that applies to this document role step.</description>
        <inlineHelpText>The document requirement that applies to this document role step.</inlineHelpText>
        <label>Document Requirement</label>
        <referenceTo>DocumentRequirement__c</referenceTo>
        <relationshipLabel>Document Steps</relationshipLabel>
        <relationshipName>DocumentSteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DocumentStepEID__c</fullName>
        <description>The Enterprise ID of this Document Step.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID of this Document Step.</inlineHelpText>
        <label>Document Step EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InternalStatus__c</fullName>
        <description>The status to be shown internally upon receipt of a good document at this level.</description>
        <inlineHelpText>The status to be shown internally upon receipt of a good document at this level.</inlineHelpText>
        <label>InternalStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Form Received from Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request with EDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request with VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request with XO Search Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docs Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 Appeal Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 Appeal Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QualificationProcessStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The process stage that this document step completes once it&apos;s successfully fulfilled.</description>
        <inlineHelpText>The process stage that this document step completes once it&apos;s successfully fulfilled.</inlineHelpText>
        <label>Qualification Process Stage</label>
        <referenceTo>QualificationProcessStage__c</referenceTo>
        <relationshipLabel>Document Steps</relationshipLabel>
        <relationshipName>DocumentSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StepOrder__c</fullName>
        <description>The order in which the steps under a Document Requirement should be accomplished. The last step alone fulfills the Document Requirement.</description>
        <inlineHelpText>The order in which the steps under a Document Requirement should be accomplished. The last step alone fulfills the Document Requirement.</inlineHelpText>
        <label>StepOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Step</label>
    <listViews>
        <fullName>AllFunctions</fullName>
        <columns>DocumentRequirement__c</columns>
        <columns>DocumentStepEID__c</columns>
        <columns>NAME</columns>
        <columns>QualificationProcessStage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Functions</label>
    </listViews>
    <nameField>
        <label>Document Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>